--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 </head>
 <body>
     <header class="header">
-        <div class="container">
+        <div class="header-container">
             <h1 class="header-title">Padaria Virtual</h1>
             <nav class="nav">
                 <ul class="nav-list">
